# pre-commit-hook-branch-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
.github/: pre-commit-config.yaml
.github/workflows/: CI.yml
pre_commit_hooks/: branch_check.py
