[metadata]
name = branch_check
version = 0.1.0
description = Check branch name against allow/deny patterns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/efrecon/pre-commit-hook-branch-check
author = Emmanuel Frecon
author_email = efrecon+github@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    hooks*

[options.entry_points]
console_scripts =
    branch_check = pre_commit_hooks.branch_check:main